[tool.poetry]
name = "repl_python3_CS110-Spring-22-Midterm-Aviva-Friedman"
version = "0.1.0"
description = ""
authors = ["Aviva-JJ <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
image = "^1.5.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
